--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
+    "@types/react-copy-to-clipboard": "^4.3.0",
     "@types/react-dom": "^16.9.0",
     "@types/styled-components": "^5.0.1",
     "fast-xml-parser": "^3.16.0",
+    "file-saver": "^2.0.2",
     "musicxml-interfaces": "^0.0.20",
     "react": "^16.12.0",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.12.0",
     "react-scripts": "3.4.0",
     "styled-components": "^5.0.1",
